--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gitmoji-cli",
+  "name": "xquare-gitmoji-cli",
   "version": "0.0.1",
-  "description": "A gitmoji client for using emojis on commit messages.",
+  "description": "A gitmoji client for using emojis on commit messages. (For xquare members)",
   "engines": {
     "node": ">=12"
   },
@@ -17,8 +17,7 @@
     "coverage": "codecov",
     "flow": "flow",
     "lint": "prettier --check src/**/*.js",
-    "package": "pkg . --output ./bin/gitmoji --targets latest-linux-x64,latest-macos-x64,latest-win-x64",
-    "prepublishOnly": "yarn run lint && yarn run flow && yarn run test"
+    "package": "pkg . --output ./bin/gitmoji --targets latest-linux-x64,latest-macos-x64,latest-win-x64"
   },
   "repository": {
     "type": "git",
